# as_schemes

./: .gitignore  Cargo.toml  README.md  ReadME  package-lock.json
bitcoin_scripts/: scriptPubKey  scriptSig
eth_smart_contracts/: hardhat.config.js  package-lock.json  package.json
eth_smart_contracts/contracts/: TimedMultisigWallet.sol
eth_smart_contracts/test/: TimedMultisigWallet.js
src/: crypto_impl.rs  ecdsa.rs  fde_client.rs  fde_server.rs  lib.rs  main.rs  main_fde.rs  scheme.rs  schnorr.rs  utils.rs
tests/: ecdsa_tests.rs  schnorr_tests.rs
